demo-app/demo-nginx-kustomization/overlays/dev/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
# temporarily disable fot testing
#  template:
#    spec:
#      containers:
#        - name: nginx
#          resources:
#            requests:
#              cpu: 200m
#              memory: 8Mi
#            limits:
#              cpu: 200m
#              memory: 16Mi
#
