demo-app/demo-nginx-kustomization/overlays/dev/networkpolicy.yaml
# Default-deny
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nginx-netpol
spec:
  podSelector: {}
#    matchLabels:
#      app.kubernetes.io/name: nginx
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - ports:
        - port: 8080
          protocol: TCP
    # Exporter /metrics on 9113. Prometheus
    # kubelet probes it from the node IP
    - ports:
        - port: 9113
          protocol: TCP
  egress:
    # DNS to CoreDNS in kube-system. The pod otherwise serves static content
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
